# rob301_lab_startercode

./: README.md  requirements.txt
camera/: CMakeLists.txt  package.xml
camera/launch/: camera.launch
camera/nodes/: camera.py  camera_rgb.py  color.py  line_detector.py  line_detector_test.py
final_project/: CMakeLists.txt  package.xml
final_project/launch/: final_project.launch
final_project/nodes/: final_project.py
lab1/: CMakeLists.txt  package.xml
lab1/launch/: lab1.launch
lab1/nodes/: motor.py
lab2/: CMakeLists.txt  package.xml
lab2/launch/: lab2.launch
lab3/: CMakeLists.txt  package.xml
lab3/launch/: lab3.launch
lab3/nodes/: lab3.py
lab4/: CMakeLists.txt  package.xml
lab4/launch/: demo.xml  lab4-turtlebot.launch  lab4.launch
lab4/nodes/: get_scan_angle.py  localizer.py  pub_noisy_vel.py
